new updated doc based update code