@@ -15,21 +15,27 @@ import java.util.Collections;
 
 public class XmlUtil {
 
-    public static void signXml(Document doc, PrivateKey privateKey, X509Certificate cert) throws Exception {
+    public static void signXml(Document doc, PrivateKey privateKey, X509Certificate cert, String version) throws Exception {
         XMLSignatureFactory fac = XMLSignatureFactory.getInstance("DOM");
 
+        String normalizedVersion = normalizeVersion(version);
+        String digestMethod = "1.2".equals(normalizedVersion) ? DigestMethod.SHA1 : DigestMethod.SHA256;
+        String signatureMethod = "1.2".equals(normalizedVersion) ? SignatureMethod.RSA_SHA1 : SignatureMethod.RSA_SHA256;
+
         Reference ref = fac.newReference("",
-                fac.newDigestMethod(DigestMethod.SHA256, null),
+                fac.newDigestMethod(digestMethod, null),
                 Collections.singletonList(fac.newTransform(Transform.ENVELOPED, (TransformParameterSpec) null)),
                 null, null);
 
         SignedInfo si = fac.newSignedInfo(
                 fac.newCanonicalizationMethod(CanonicalizationMethod.INCLUSIVE, (C14NMethodParameterSpec) null),
-                fac.newSignatureMethod(SignatureMethod.RSA_SHA256, null),
+                fac.newSignatureMethod(signatureMethod, null),
                 Collections.singletonList(ref));
 
         KeyInfoFactory kif = fac.getKeyInfoFactory();
-        X509Data xd = kif.newX509Data(Collections.singletonList(cert));
+        X509Data xd = kif.newX509Data(
+                java.util.List.of(cert.getSubjectX500Principal().getName(), cert)
+        );
         KeyInfo ki = kif.newKeyInfo(Collections.singletonList(xd));
 
         DOMSignContext dsc = new DOMSignContext(privateKey, doc.getDocumentElement());
@@ -46,5 +52,16 @@ public class XmlUtil {
         DOMValidateContext validateContext = new DOMValidateContext(publicKey, sigNodes.item(0));
         XMLSignature signature = fac.unmarshalXMLSignature(validateContext);
         return signature.validate(validateContext);
+    }
+
+    private static String normalizeVersion(String version) {
+        if (version == null || version.isBlank()) {
+            throw new IllegalArgumentException("CKYC version must be provided (expected 1.2 or 1.3)");
+        }
+        String normalized = version.trim();
+        if (!"1.2".equals(normalized) && !"1.3".equals(normalized)) {
+            throw new IllegalArgumentException("Unsupported CKYC version: " + normalized);
+        }
+        return normalized;
     }
 }
